--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -5,4 +5,5 @@
 @import "partials/general";
 @import "partials/header";
 @import "partials/main";
+@import "partials/face-to-face";
 @import "partials/footer";
