--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -759,4 +759,50 @@ main .container__tournament .container__trajectory .trajectory-trophies .small-d
   font-weight: 700;
   padding: 1rem 0;
 }
+
+form {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 2rem auto;
+  width: auto;
+}
+
+form .form-row {
+  margin: 0.5rem 0;
+}
+
+form .form-row input {
+  margin: 0 0.5rem;
+}
+
+.container_matches {
+  background-color: bisque;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-height: 300px;
+  margin: 2rem auto;
+  width: 90%;
+}
+
+.container_matches .match {
+  margin: 0.5rem;
+}
 /*# sourceMappingURL=styles.css.map */
