--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -6,4 +6,5 @@
 @import "partials/header";
 @import "partials/main";
 @import "partials/face-to-face";
+@import "partials/api";
 @import "partials/footer";
