--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -5,6 +5,7 @@
 @import "partials/general";
 @import "partials/header";
 @import "partials/main";
+@import "partials/modal";
 @import "partials/face-to-face";
 @import "partials/api";
 @import "partials/footer";
