--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -186,7 +186,35 @@ main .container__tournament .flex-container .container__tournament-header .conta
   text-transform: uppercase;
   width: 65%;
 }
-main .container__tournament .container__tournament-content-stack {
+main .container__tournament .carousel.slide {
+  width: 100%;
+}
+main .container__tournament .carousel.slide .carousel-control-prev {
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+main .container__tournament .carousel.slide .carousel-control-prev .carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
+}
+main .container__tournament .carousel.slide .carousel-control-next {
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+main .container__tournament .carousel.slide .carousel-control-next .carousel-control-next-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+}
+main .container__tournament .carousel.slide .carousel-indicators button {
+  background-color: #000;
+}
+main .container__tournament .carousel.slide .carousel-inner .carousel-item {
+  -webkit-transition: -webkit-transform 0.6s ease-in-out;
+  transition: -webkit-transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out;
+  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out;
+}
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -199,11 +227,11 @@ main .container__tournament .container__tournament-content-stack {
   position: relative;
   width: 100%;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content {
   border: #000 1.13px solid;
   position: relative;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-title {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-title {
   background-color: #0AB9D8;
   border-bottom: #000 1.13px solid;
   color: #fff;
@@ -212,11 +240,11 @@ main .container__tournament .container__tournament-content-stack .container__tou
   text-align: center;
   text-transform: uppercase;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .img-gallartie {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .img-gallartie {
   width: 100%;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion,
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion,
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -232,22 +260,22 @@ main .container__tournament .container__tournament-content-stack .container__tou
           justify-content: space-evenly;
   text-transform: uppercase;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion {
   background-color: #F5D77F;
   border: #DAA813 3.5px solid;
   margin: 1.5rem auto 0.75rem auto;
   padding: 0.75rem 0.25rem;
   width: 85%;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .img-team {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .img-team {
   height: 75px;
   width: 60px;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .img-country {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .img-country {
   height: 60px;
   width: 85px;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -256,20 +284,20 @@ main .container__tournament .container__tournament-content-stack .container__tou
       -ms-flex-direction: column;
           flex-direction: column;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details .span-title {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details .span-title {
   color: #000;
   font-size: 0.95rem;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details .span-name {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details .span-name {
   color: #004a79;
   font-size: 3rem;
   line-height: 2.5rem;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details .span-team {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-champion .container__tournament-content-champion-details .span-team {
   color: #000;
   font-size: 1.125rem;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist {
   background-color: #C5C3C0;
   border: #61605F 3.5px solid;
   margin: 0.75rem auto 1.5rem auto;
@@ -278,20 +306,20 @@ main .container__tournament .container__tournament-content-stack .container__tou
   width: -moz-fit-content;
   width: fit-content;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .img-team {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .img-team {
   height: 50px;
   margin: 0 0.5rem 0 1rem;
   width: 45px;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .img-team.img-team-atletico-madrid-small {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .img-team.img-team-atletico-madrid-small {
   width: 35px;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .img-country {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .img-country {
   height: 40px;
   margin: 0 0.5rem 0 1rem;
   width: 55px;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -301,16 +329,16 @@ main .container__tournament .container__tournament-content-stack .container__tou
           flex-direction: column;
   margin: 0 1rem 0 0.5rem;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details .span-title {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details .span-title {
   color: #000;
   font-size: 0.6rem;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details .span-name {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details .span-name {
   color: #004a79;
   font-size: 1.5rem;
   line-height: 1.5rem;
 }
-main .container__tournament .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details .span-team {
+main .container__tournament .carousel.slide .carousel-inner .carousel-item .container__tournament-content-stack .container__tournament-content .container__tournament-content-finalist .container__tournament-content-finalist-details .span-team {
   color: #000;
   font-size: 0.75rem;
 }
@@ -623,6 +651,70 @@ main .container__tournament .container__trajectory .trajectory-trophies span {
 }
 main .container__tournament .container__trajectory .trajectory-trophies .small-description {
   font-size: 0.75rem;
+}
+
+.modal-profile {
+  display: block;
+  height: 100%;
+  position: absolute;
+  inset: 0;
+  -webkit-transition: all 1000ms linear;
+  transition: all 1000ms linear;
+  width: 100%;
+  z-index: 100;
+}
+.modal-profile .modal-profile-container {
+  background-color: bisque;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
+  padding: 0.5rem;
+  position: relative;
+}
+.modal-profile .modal-profile-container .modal-profile-header {
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+}
+.modal-profile .modal-profile-container .modal-profile-header img {
+  border: 0;
+  border-radius: 50%;
+  width: 125px;
+}
+.modal-profile .modal-profile-container .modal-profile-header span {
+  margin: 0 2rem;
+  font-size: 2.75rem;
+}
+.modal-profile .modal-profile-container button {
+  border: black 1px solid;
+  border-radius: 50%;
+  height: 2rem;
+  margin: 0.25rem;
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 2rem;
+}
+
+.hidden {
+  display: none;
+}
+
+.visuallyHidden {
+  opacity: 0;
 }
 
 .container_table {
