--- a/public/scss/partials/_main.scss
+++ b/public/scss/partials/_main.scss
@@ -53,122 +53,158 @@ main {
       }
     }
 
-    .container__tournament-content-stack {
-      display: flex;
-      flex-direction: column;
-      height: auto;
-      margin: 0.75rem 0;
-      position: relative;
+    .carousel.slide {
       width: 100%;
 
-      .container__tournament-content {
-        border: #000 1.13px solid;
-        position: relative;
+      .carousel-control-prev {
+        justify-content: flex-start; // Position of arrows inside de carousel
 
-        .container__tournament-content-title {
-          background-color: $mainAquamarine;
-          border-bottom: #000 1.13px solid;
-          color: #fff;
-          font-size: 1.25rem;
-          padding: 0.25rem 0;
-          text-align: center;
-          text-transform: uppercase;
+        .carousel-control-prev-icon {
+          background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3e%3c/svg%3e");
         }
 
-        .img-gallartie {
-          width: 100%;
+        // Arrow, including its color.
+      }
+
+      .carousel-control-next {
+        justify-content: flex-end; // Position of arrows inside de carousel
+
+        .carousel-control-next-icon {
+          background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
         }
 
-        .container__tournament-content-champion,
-        .container__tournament-content-finalist {
-          align-items: center;
-          display: flex;
-          flex-direction: row;
-          justify-content: space-evenly;
-          text-transform: uppercase;
+        // Arrow, including its color.
+      }
+
+      .carousel-indicators {
+        button {
+          background-color: #000; // Background color for carousel indicators!
         }
+      }
 
-        .container__tournament-content-champion {
-          background-color: $mainGold;
-          border: $secondaryGold 3.5px solid;
-          margin: 1.5rem auto 0.75rem auto;
-          padding: 0.75rem 0.25rem;
-          width: 85%;
+      .carousel-inner {
+        .carousel-item {
+          transition: transform 0.6s ease-in-out; // Animation speed at fade-in/out of each slide
 
-          .img-team {
-            height: 75px;
-            width: 60px;
-          }
-
-          .img-country {
-            height: 60px;
-            width: 85px;
-          }
-
-          .container__tournament-content-champion-details {
+          .container__tournament-content-stack {
             display: flex;
             flex-direction: column;
+            height: auto;
+            margin: 0.75rem 0;
+            position: relative;
+            width: 100%;
 
-            .span-title {
-              color: #000;
-              font-size: 0.95rem;
-            }
+            .container__tournament-content {
+              border: #000 1.13px solid;
+              position: relative;
 
-            .span-name {
-              color: $mainBlue;
-              font-size: 3rem;
-              line-height: 2.5rem;
-            }
+              .container__tournament-content-title {
+                background-color: $mainAquamarine;
+                border-bottom: #000 1.13px solid;
+                color: #fff;
+                font-size: 1.25rem;
+                padding: 0.25rem 0;
+                text-align: center;
+                text-transform: uppercase;
+              }
 
-            .span-team {
-              color: #000;
-              font-size: 1.125rem;
-            }
-          }
-        }
+              .img-gallartie {
+                width: 100%;
+              }
 
-        .container__tournament-content-finalist {
-          background-color: $mainGray;
-          border: $secondaryGray 3.5px solid;
-          margin: 0.75rem auto 1.5rem auto;
-          padding: 0.5rem 0;
-          width: fit-content;
+              .container__tournament-content-champion,
+              .container__tournament-content-finalist {
+                align-items: center;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-evenly;
+                text-transform: uppercase;
+              }
 
-          .img-team {
-            height: 50px;
-            margin: 0 0.5rem 0 1rem;
-            width: 45px;
-          }
+              .container__tournament-content-champion {
+                background-color: $mainGold;
+                border: $secondaryGold 3.5px solid;
+                margin: 1.5rem auto 0.75rem auto;
+                padding: 0.75rem 0.25rem;
+                width: 85%;
 
-          .img-team.img-team-atletico-madrid-small {
-            width: 35px;
-          }
+                .img-team {
+                  height: 75px;
+                  width: 60px;
+                }
 
-          .img-country {
-            height: 40px;
-            margin: 0 0.5rem 0 1rem;
-            width: 55px;
-          }
+                .img-country {
+                  height: 60px;
+                  width: 85px;
+                }
 
-          .container__tournament-content-finalist-details {
-            display: flex;
-            flex-direction: column;
-            margin: 0 1rem 0 0.5rem;
+                .container__tournament-content-champion-details {
+                  display: flex;
+                  flex-direction: column;
 
-            .span-title {
-              color: #000;
-              font-size: 0.6rem;
-            }
+                  .span-title {
+                    color: #000;
+                    font-size: 0.95rem;
+                  }
 
-            .span-name {
-              color: $mainBlue;
-              font-size: 1.5rem;
-              line-height: 1.5rem;
-            }
+                  .span-name {
+                    color: $mainBlue;
+                    font-size: 3rem;
+                    line-height: 2.5rem;
+                  }
 
-            .span-team {
-              color: #000;
-              font-size: 0.75rem;
+                  .span-team {
+                    color: #000;
+                    font-size: 1.125rem;
+                  }
+                }
+              }
+
+              .container__tournament-content-finalist {
+                background-color: $mainGray;
+                border: $secondaryGray 3.5px solid;
+                margin: 0.75rem auto 1.5rem auto;
+                padding: 0.5rem 0;
+                width: fit-content;
+
+                .img-team {
+                  height: 50px;
+                  margin: 0 0.5rem 0 1rem;
+                  width: 45px;
+                }
+
+                .img-team.img-team-atletico-madrid-small {
+                  width: 35px;
+                }
+
+                .img-country {
+                  height: 40px;
+                  margin: 0 0.5rem 0 1rem;
+                  width: 55px;
+                }
+
+                .container__tournament-content-finalist-details {
+                  display: flex;
+                  flex-direction: column;
+                  margin: 0 1rem 0 0.5rem;
+
+                  .span-title {
+                    color: #000;
+                    font-size: 0.6rem;
+                  }
+
+                  .span-name {
+                    color: $mainBlue;
+                    font-size: 1.5rem;
+                    line-height: 1.5rem;
+                  }
+
+                  .span-team {
+                    color: #000;
+                    font-size: 0.75rem;
+                  }
+                }
+              }
             }
           }
         }
