--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -84,6 +84,11 @@ header {
         top: 0;
         right: 0;
 
+        svg {
+            height: 25px;
+            width: 25px;
+        }
+
         &:focus {
             outline: none;
         }
