--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -4,8 +4,9 @@
 @import "partials/mixins";
 @import "partials/general";
 @import "partials/header";
-@import "partials/main";
-@import "partials/modal";
-@import "partials/face-to-face";
-@import "partials/api";
 @import "partials/footer";
+@import "partials/modal";
+@import "partials/main";
+@import "partials/face-to-face";
+@import "partials/create-tournament";
+@import "partials/api";
