--- a/public/scss/partials/_general.scss
+++ b/public/scss/partials/_general.scss
@@ -1,9 +1,12 @@
-* {
+*,
+::after,
+::before {
     box-sizing: border-box;
     font-family: $mainFont;
     font-weight: 800;
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
 .italic {
