--- a/public/views/face-to-face.ejs
+++ b/public/views/face-to-face.ejs
@@ -1,69 +1,65 @@
 <%- include('./partials/header')-%>
 
-<% if(finalMatchups.length > 0){ %> 
-    <div>Hola, hay emparejamientos</div>
-    <% } 
-    else{ %> <div>Hola, NO hay emparejamientos</div> <% } %>
+    <% if(finalMatchups.length> 0){ %>
+        <div>Hola, hay emparejamientos</div>
+        <% } else{ %>
+            <div>Hola, NO hay emparejamientos</div>
+            <% } %>
 
-<div class="container_table">
-    <div class="row">
-        <div class="column">
-            <div class="cell">Enfrentamientos</div>
-            <%finalMatchups.forEach(function(element, index) {%>
-            <div class="cell"><%=element.matchup%></div>
-            <%});%>
-        </div>
-        <div class="column">
-            <div class="cell">Partidos jugados</div>
-            <%finalMatchups.forEach(function(element, index) {%>
-            <div class="cell"><%=element.matches.length%></div>
-            <%});%>
-        </div>
-        <div class="column">
-            <div class="cell">Victorias (J1)</div>
-            <%finalMatchups.forEach(function(element, index) {%>
-            <div class="cell"><%=element.wonByP1%></div>
-            <%});%>
-        </div>
-        <div class="column">
-            <div class="cell">Empates</div>
-            <%finalMatchups.forEach(function(element, index) {%>
-            <div class="cell"><%=element.draws%></div>
-            <%});%>
-        </div>
-        <div class="column">
-            <div class="cell">Victorias (J2)</div>
-            <%finalMatchups.forEach(function(element, index) {%>
-            <div class="cell"><%=element.wonByP2%></div>
-            <%});%>
-        </div>
-    </div>
-</div>
-<form class="form" action="/face-to-face" method="post" autocomplete="off">
-    <div class="form-row">
-        <input id="playerP1" name='playerP1' placeholder="Jugador 1 (J1)" type="text" required>
-        <input id="teamP1" name='teamP1' placeholder="Equipo J1" type="text" required>
-        <input id="scoreP1" name='scoreP1' placeholder="Marcador J1" type="text" required>
-    </div>
-    <div class="form-row">
-        <input id="playerP2" name='playerP2' placeholder="Jugador 2 (J2)" type="text" required>
-        <input id="teamP2" name='teamP2' placeholder="Equipo J2" type="text" required>
-        <input id="scoreP2" name='scoreP2' placeholder="Marcador J2" type="text" required>
-    </div>
-    <div class="form-row">
-        <input type="submit">
-    </div>
-</form>
+                <div class="container_table">
+                    <div class="row">
+                        <div class="column">
+                            <div class="cell">Enfrentamientos</div>
+                            <%finalMatchups.forEach(function(element, index) {%>
+                                <div class="cell">
+                                    <%=element.matchup%>
+                                </div>
+                                <%});%>
+                        </div>
+                        <div class="column">
+                            <div class="cell">Partidos jugados</div>
+                            <%finalMatchups.forEach(function(element, index) {%>
+                                <div class="cell">
+                                    <%=element.matches.length%>
+                                </div>
+                                <%});%>
+                        </div>
+                        <div class="column">
+                            <div class="cell">Victorias (J1)</div>
+                            <%finalMatchups.forEach(function(element, index) {%>
+                                <div class="cell">
+                                    <%=element.wonByP1%>
+                                </div>
+                                <%});%>
+                        </div>
+                        <div class="column">
+                            <div class="cell">Empates</div>
+                            <%finalMatchups.forEach(function(element, index) {%>
+                                <div class="cell">
+                                    <%=element.draws%>
+                                </div>
+                                <%});%>
+                        </div>
+                        <div class="column">
+                            <div class="cell">Victorias (J2)</div>
+                            <%finalMatchups.forEach(function(element, index) {%>
+                                <div class="cell">
+                                    <%=element.wonByP2%>
+                                </div>
+                                <%});%>
+                        </div>
+                    </div>
+                </div>
+                <div class="container_matches">
 
-<div class="container_matches">
+                    <%allMatches.forEach(function(element, index) {%>
 
-<%allMatches.forEach(function(element, index) {%>
-    
-        <div class="match">
-        <%=element.teamP1%> (<%=element.playerP1%>) <%=element.scoreP1%> vs <%=element.scoreP2%> (<%=element.playerP2%>) <%=element.teamP2%> 
-        </div>
-   
-    <%});%>
-</div>
+                        <div class="match">
+                            <%=element.teamP1%> (<%=element.playerP1%>) <%=element.scoreP1%> vs <%=element.scoreP2%> (
+                                            <%=element.playerP2%>) <%=element.teamP2%>
+                        </div>
 
-<%- include('./partials/footer')-%>
+                        <%});%>
+                </div>
+
+                <%- include('./partials/footer')-%>
